Gif fix and moved to top on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -820,9 +820,7 @@ h1, h2, h3, h4, h5 {
 		&--hero {
 			@include flex;
 			align-items: center;
-			// justify-content: center;
-			padding: 100px 0px;
-			padding-bottom: 80px;
+			padding: 80px 0px;
 
 			.section_content {
 				width: 90%;
@@ -835,17 +833,12 @@ h1, h2, h3, h4, h5 {
 					@include inlineFlex;
 					align-items: center;
 					width: 100%;
-					// margin-bottom: 20px;
-					// padding: 15px 0px;
-					// border-top: 1px solid #eaeaea;
-					// border-bottom: 1px solid #eaeaea;
 
 					&_divider {
 						display: block;
 						margin: 0px 20px;
 						width: 1px;
 						height: 25px;
-						// background-color: #d0d0d0;
 					}
 
 					&_h2 {
@@ -1240,11 +1233,9 @@ h1, h2, h3, h4, h5 {
 
 	&--mobile {
 		display: none;
-		max-width: 350px;
+		max-width: 500px;
 		margin-top: 35px;
 		margin-bottom: 30px;
-		-ms-grid-columns: 1fr 45px;
-		grid-template-columns: 1fr 45px;
 
 		.section_content_imageContainer_img {
 			max-width: 100% !important;
@@ -1644,7 +1635,7 @@ audio {
 						grid-column-gap: 20px;
 
 						&--mobile {
-							@include grid;
+							display: block;
 						}
 
 						&--desktop {
